<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:popupTheme="@style/AppTheme">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/AppTheme" />


    </android.support.design.widget.AppBarLayout>


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/nestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false"
        android:scrollingCache="true">


<android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTitle_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/textInputEditTextTitle_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Title_en"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>




        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutTitle_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/textInputEditTextTitle_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Title_ar"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutdescription_en"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/textInputEditTextdescription_en"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Description_en"
                android:inputType="text"
                android:maxLines="3"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutdescription_ar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <EditText
                android:id="@+id/textInputEditTextdescription_ar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Description_ar"
                android:inputType="text"
                android:maxLines="3"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutLat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/textInputEditTextLat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Latitude"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutlong"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">

            <EditText
                android:id="@+id/textInputEditTextlong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_Longitude"
                android:inputType="text"
                android:maxLines="1"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>


    <com.balysv.materialripple.MaterialRippleLayout
        android:id="@+id/lyt_add"
        style="@style/RippleStyleBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:clickable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/spacing_xxlarge"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:tint="@android:color/white" />

        <TextView
            android:id="@+id/tv_add_services"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_middle"
            android:layout_marginRight="@dimen/spacing_middle"
            android:text="@string/text_submit"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            android:textColor="@android:color/white"
            android:textStyle="bold" />
    </LinearLayout>
    </com.balysv.materialripple.MaterialRippleLayout>
    </android.support.v7.widget.LinearLayoutCompat>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>
